update+ show tenant endpoints
